compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_fullwidth_left_square_bracket.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main() { ［1, 2] }"
---
----- SOURCE CODE
pub fn main() { ［1, 2] }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:17
  │
1 │ pub fn main() { ［1, 2] }
  │                 ^^ Unexpected character

This looks like ascii left square bracket, but it is actually the unicode
fullwidth left square bracket.
